Fixed extra margin

--- a/src/screens/resume-process/certifications/Cerifications.css
+++ b/src/screens/resume-process/certifications/Cerifications.css
@@ -40,10 +40,10 @@ body {
     color: #474747;
 }
 
-/* .button {
+.button {
     margin-top: 100px;
     text-align: right;
-} */
+}
 
 
 .add-item {
@@ -196,7 +196,6 @@ ion-icon {
 button {
     display: flex;
     justify-content: center;
-    margin-top: 100px;
     text-align: center;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
     border: none;
